# resume-roast

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: development.md  workflow.md
docs/checks/: INDEX.md  code-review.md  dead-code.md  global-doc-drift.md  local-doc-drift.md  local-test-quality.md  spec-review.md  workflow-conformance.md
docs/design-principles/: INDEX.md  TEMPLATE.md  dp-001-test-behavior-not-implementation.md  dp-002-economical-test-code.md  dp-003-thin-cli-handlers.md
docs/invariants/: INDEX.md  TEMPLATE.md  inv-001-secrets-stay-in-credential-store.md  inv-002-json-never-crosses-a-boundary-untyped.md
scripts/: check_tdd.py
specs/: INDEX.md  TEMPLATE.md  spec-001-config-and-credential-storage.md  spec-002-restructure-cli-into-package.md  spec-003-show-credentials.md  spec-004-rewire-cli-runner-and-typer-groups.md  spec-005-settings-persistence.md  spec-006-pdf-parsing-pipeline.md
src/resume_roast/: __main__.py  cli.py  logging_config.py
src/resume_roast/cli/: __init__.py  app.py  chat.py  chat_renderer.py  guards.py  input_provider.py  registry.py  runner.py  types.py  utils.py
src/resume_roast/integrations/: __init__.py  conversation.py  errors.py  llm_client.py  react.py  structured.py  types.py  usage.py
src/resume_roast/parsing/: __init__.py  errors.py  models.py  pdf.py  pipeline.py  render.py  tree.py  treeify.py
src/resume_roast/persistence/: __init__.py  base_parser.py  base_store.py  errors.py  json_file.py  json_parser.py  paths.py
src/resume_roast/prompts/: __init__.py  advice.py  bullets.py  evaluate.py  levels.py  personas.py  response_parser.py  scoring.py  structure.py  subcommand_parser.py  types.py
tests/: conftest.py  test_cli.py  test_true.py
tests/cli/: conftest.py  test_config.py  test_evaluate.py  test_show.py  test_utils.py
tests/integrations/: test_conversation.py  test_structured.py
tests/parsing/: conftest.py  test_pdf.py  test_pipeline.py  test_tree.py  test_treeify.py
tests/persistence/: test_base_store.py  test_config_store.py  test_credentials_store.py  test_paths.py
tests/prompts/: test_evaluate.py  test_registries.py
tests/services/: test_evaluate.py
(+204 files in other folders)
