[project]
name = "resume-roast"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeffery Fang",email = "jefferyfang324@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "resume_roast", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
