[project]
name = "resume-roast"
version = "0.1.0"
description = ""
authors = [
    {name = "Jeffery Fang",email = "jefferyfang324@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "resume_roast", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.20,<0.16.0)",
    "pyright (>=1.1.411,<2.0.0)"
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP", "B", "C4", "PERF", "RET", "ARG", "ASYNC", "N", "A", "RUF", "S", "T100",
    "D401", "D415"
]
ignore = [
    "E501",
    "B008",
    "T201",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["resume_roast"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/.ruff_cache",
    "**/.pytest_cache",
    "**/.venv",
    "**/dist"
]

venvPath = "."
venv = ".venv"

pythonVersion = "3.12"
typeCheckingMode = "strict"

reportMissingImports = true
reportMissingTypeStubs = false

reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true

reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryCast = true

reportUnknownMemberType = true
reportUnknownArgumentType = true
reportUnknownVariableType = true
reportUnknownParameterType = true